# ml_project_template

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.kaggle.yaml  config.local.yaml  config_loader.py
configs/secrets/: .secrets.local.yaml  kagglesecretmanager.py  localsecretmanager.py  secretmanagerbase.py  secretmanagerfactory.py
notebooks/: 01_data_exploration.ipynb
tests/: test_config_loader.py
